WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171118
X86-64 assembler doesn't handle xchg with byte register src
https://bugs.webkit.org/show_bug.cgi?id=171118
Summary
X86-64 assembler doesn't handle xchg with byte register src
Michael Saboff
Reported
2017-04-21 10:29:50 PDT
The Intel manual Vol 2A 3-3 shows that byte registers SPL and greater require a REX prefix byte. The is done with the X86Assembler function oneByteOp8(). Use of that function was omitted when the xchg8_*() functions was added.
Attachments
Patch
(1.51 KB, patch)
2017-04-21 10:38 PDT
,
Michael Saboff
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-04-21 10:32:14 PDT
<
rdar://problem/31760529
>
Michael Saboff
Comment 2
2017-04-21 10:38:51 PDT
Created
attachment 307746
[details]
Patch I did verify that all other byte ops use the *Op8() formatter function.
Michael Saboff
Comment 3
2017-04-21 10:42:33 PDT
I fixed the spelling in the bug title, including the ChangeLog.
Michael Saboff
Comment 4
2017-04-21 11:28:53 PDT
Committed
r215618
: <
http://trac.webkit.org/changeset/215618
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug