X86-64 Assembler doesn't handle xchg with byte register src https://bugs.webkit.org/show_bug.cgi?id=171118

Reviewed by Saam Barati.

* assembler/X86Assembler.h:
(JSC::X86Assembler::xchgb_rm): Use oneByteOp8() since these are 8 bit opcodes.


Canonical link: https://commits.webkit.org/188022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215618 268f45cc-cd09-0410-ab3c-d52691b4dbfc